# ismip7-antarctic-ocean-forcing

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.html  dev-spec.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: build_workflow.yml  docs.yml  pre_commit_update_workflow.yml
_sources/dev/: releasing.md.txt
_sources/user/: remap.md.txt
analysis/: timeseries_nlocs.ipynb  timeseries_nlocs.py
api/: i7aof.biascorr.html  i7aof.download.html  i7aof.grid.html  i7aof.imbie.html  i7aof.io.html  i7aof.remap.html  i7aof.topo.html  i7aof.vert.html  index.html
biascorr/notebooks/: plot_series.ipynb
biascorr/src/: region.py  run.py
conda/: build.sh  recipe.yaml
conda/variants/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.14.____cp314.yaml
contemporary/: README.md  build_contemporary_AIS_ocean.py  calculate_TF_ice_drafts.py  plot_TF_time_series_per_ice_shelf_contemporary.py
dev/: architecture.html  cli.html  contributing.html  index.html  releasing.html
docs/: changelog.md  conf.py  getting-started.md  index.md
docs/_static/: ismip7_ant_ocn_frc.xcf
docs/api/: i7aof.biascorr.md  i7aof.clim.md  i7aof.cmip.md  i7aof.config.md  i7aof.convert.md  i7aof.coords.md  i7aof.download.md  i7aof.extrap.md  i7aof.grid.md  i7aof.imbie.md  i7aof.io.md  i7aof.io_zarr.md  i7aof.remap.md  i7aof.time.md  i7aof.topo.md  i7aof.vert.md  index.md
docs/dev/: architecture.md  cli.md  contributing.md  index.md  releasing.md
docs/user/: annual.md  bias-correction.md  clim.md  cmip.md  convert.md  extrap.md  faq.md  imbie-polygons.md  index.md  install.md  quickstart.md  remap.md  workflows.md
example_job_scripts/01_split/: job_script_cmip_hist_split.bash  job_script_cmip_ssp_split.bash
example_job_scripts/02_cmip_to_ct_sa/: job_script_cmip_hist_to_ct_sa.bash  job_script_cmip_ssp_to_ct_sa.bash
example_job_scripts/03_remap/: job_script_remap_clim.bash  job_script_remap_hist.bash  job_script_remap_ssp.bash
example_job_scripts/04_extrap/: job_script_extrap_clim.bash  job_script_extrap_hist.bash  job_script_extrap_ssp.bash
example_job_scripts/05_biascorr/: job_script_biascorr.bash
example_job_scripts/06_ct_sa_to_tf/: job_script_tf_clim.bash  job_script_tf_hist.bash  job_script_tf_ssp.bash
example_job_scripts/07_annual/: job_script_ann_hist.bash  job_script_ann_ssp.bash
example_job_scripts/08_ct_sa_to_thetao_so/: job_script_thetao_clim.bash  job_script_thetao_hist.bash  job_script_thetao_ssp.bash
example_job_scripts/annual/: job_script_ann_hist.bash  job_script_ann_ssp.bash
example_job_scripts/biascorr/: job_script_biascorr.bash
example_job_scripts/cmip_to_ct_sa/: job_script_cmip_hist_to_ct_sa.bash  job_script_cmip_ssp_to_ct_sa.bash
example_job_scripts/ct_sa_to_tf/: job_script_tf_clim.bash  job_script_tf_hist.bash  job_script_tf_ssp.bash
example_job_scripts/ct_sa_to_thetao_so/: job_script_thetao_clim.bash  job_script_thetao_hist.bash  job_script_thetao_ssp.bash
example_job_scripts/extrap/: job_script_extrap_clim.bash  job_script_extrap_hist.bash  job_script_extrap_ssp.bash
example_job_scripts/remap/: job_script_remap_clim.bash  job_script_remap_hist.bash  job_script_remap_ssp.bash
fortran/: CMakeLists.txt  LICENSE-extrap  README.md  extrapolate_everywhere_horizontally.f90  extrapolate_remaining_vertically.f90
i7aof/: __init__.py  __main__.py  config.py  coords.py  default.cfg  download.py  io.py  io_zarr.py  paths.py  remap.py
i7aof/biascorr/: classic.py  projection.py  region.py  run.py  timeslice.py
i7aof/clim/: zhou_2000_annual_06_nov.cfg  zhou_2000_annual_30_sep.cfg  zhou_annual_06_nov.cfg  zhou_annual_30_sep.cfg  zhou_summer_06_nov.cfg  zhou_summer_30_sep.cfg
i7aof/cmip/: __init__.py  cesm2_waccm.cfg  mri_esm2_0.cfg
i7aof/convert/: __init__.py  cmip.py  cmip_to_ct_sa.py  ct_sa_to_tf.py  ct_sa_to_thetao_so.py  paths.py  split.py  teos10.py
i7aof/extrap/: __init__.py  clim.py  cmip.py  namelist_template.nml.j2  shared.py
i7aof/grid/: ismip.py
i7aof/imbie/: __init__.py  download.py  extend.py  masks.py  polygons.py
i7aof/remap/: __init__.py  clim.py  cmip.py  mapping.py  remap.py  shared.py
i7aof/time/: average.py  bounds.py  cmip.py
i7aof/topo/: __init__.py  bedmachine.py  bedmap.py  topo_base.py
i7aof/vert/: __init__.py  interp.py  resamp.py
meltmip/: README.md  parameter_selection_pico_deltaT_example.ipynb  parameter_selection_pico_example.ipynb  parameter_selection_quadratic_deltaT_example.ipynb  parameter_selection_quadratic_example.ipynb  parameter_selection_toolbox.py
notebooks/biascorr/: plot_series.ipynb
parameterisations/: README.md  parameter_selection_laddie.ipynb  parameter_selection_pico_deltaT_example.ipynb  parameter_selection_pico_example.ipynb  parameter_selection_pico_example_v2.ipynb  parameter_selection_quadratic_deltaT_example.ipynb  parameter_selection_quadratic_example.ipynb  parameter_selection_quadratic_example_otherResolutions.ipynb  parameter_selection_quadratic_example_v2.ipynb  parameter_selection_toolbox.py  parameter_selection_toolbox_v2.py  pism_11_ismip7_picotest_zhou_initmip8km.txt  pism_16_ismip7_picotest_zhou_initmip8km.txt
parameterisations/meltMIP/: Create_CMIP_snapshots.ipynb  Create_deltaT_perturbations.ipynb  Create_thermocline_perturbations.ipynb
scripts/: test_biascorr.cfg  test_biascorr.py  test_convert_cmip.cfg  test_convert_cmip.py  test_extrap_cmip.cfg  test_extrap_cmip.py  test_remap_cmip.cfg  test_remap_cmip.py  test_remap_extrap_clim.sh  test_remap_lat_lon.cfg  test_remap_lat_lon.py  test_vert_interp.cfg  test_vert_interp.py
tests/: test_convert_pipeline.py  test_coords.py  test_dim_key_rename.py  test_grid_ismip.py  test_imbie_extend.py  test_imbie_polygons.py  test_io.py  test_teos10.py
user/: bias-correction.html  cmip.html  faq.html  index.html  install.html  quickstart.html  remap.html  workflows.html
(+9 files in other folders)
