[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ismip7-antarctic-ocean-forcing"
dynamic = ["version"]
description = "A package for producing Antarctic ocean forcing data for ISMIP7"
authors = [
    { name = "Xylar Asay-Davis", email = "xylarstorm@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# dependencies that are available on PyPI, a subset of those on conda-forge
dependencies = [
    "cmocean",
    "gsw",
    "inpoly",
    "matplotlib",
    "netcdf4",
    "numpy",
    "requests",
    "progressbar2",
    "pyshp",
    "scikit-fmm",
    "scipy",
    "tqdm",
    "xarray"
]

[tool.setuptools.packages.find]
include = ["i7aof*"]

[tool.setuptools.package-data]
i7aof = ["*.cfg", "**/*.cfg"]

[project.scripts]
ismip7-antarctic-ocean-forcing = "i7aof.__main__:main"
ismip7-antarctic-remap-cmip = "i7aof.remap.cmip:main"

[tool.setuptools.dynamic]
version = { attr = "i7aof.version.__version__" }

[project.urls]
"Bug Tracker" = "https://github.com/ismip/ismip7-antarctic-ocean-forcing/issues"

[tool.ruff]
exclude = [".git",
           "docs",
           "*.ipynb"]
line-length = 79

[tool.ruff.lint]
# E501 - max line-length
# E4 - whitespace
# E7 - multiple-statements
# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# C901 - complex-structure
# D - Enable flake8-docstrings
select = ["E501", "E4", "E7", "E9", "F", "B", "W", "C901"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"
