[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ismip7-antarctic-ocean-forcing"
dynamic = ["version"]
description = "A package for producing Antarctic ocean forcing data for ISMIP7"
authors = [
    { name = "Xylar Asay-Davis", email = "xylarstorm@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# dependencies that are available on PyPI, a subset of those on conda-forge
dependencies = [
    "cmocean",
    "cftime",
    "dask",
    "gsw",
    "inpoly",
    "jinja2",
    "matplotlib",
    "netcdf4",
    "numpy",
    "requests",
    "progressbar2",
    "pyshp",
    "scikit-fmm",
    "scipy",
    "tqdm",
    "xarray",
    "zarr"
]

[project.optional-dependencies]
# dependencies for building the documentation
docs = [
    "furo>=2024.0.0",
    "linkify-it-py>=2.0",
    "myst-parser>=2.0",
    "sphinx>=7.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]

# dependencies for running tests (PyPI)
tests = [
    "pytest>=7",
    "pytest-cov>=4",
]

[tool.setuptools.packages.find]
include = ["i7aof*"]

[tool.setuptools.package-data]
i7aof = ["*.cfg", "**/*.cfg", "**/*.nml.j2"]

[project.scripts]
ismip7-antarctic-ocean-forcing = "i7aof.__main__:main"
ismip7-antarctic-convert-cmip-to-ct-sa = "i7aof.convert.cmip_to_ct_sa:main"
ismip7-antarctic-remap-clim = "i7aof.remap.clim:main"
ismip7-antarctic-remap-cmip = "i7aof.remap.cmip:main"
ismip7-antarctic-extrap-cmip = "i7aof.extrap.cmip:main"
ismip7-antarctic-extrap-clim = "i7aof.extrap.clim:main"
ismip7-antarctic-bias-corr-classic = "i7aof.biascorr.classic:main"
ismip7-antarctic-cmip-ct-sa-to-tf = "i7aof.convert.ct_sa_to_tf:main_cmip"
ismip7-antarctic-clim-ct-sa-to-tf = "i7aof.convert.ct_sa_to_tf:main_clim"
ismip7-antarctic-annual-average = "i7aof.time.average:main"
ismip7-antarctic-cmip-annual-averages = "i7aof.time.cmip:main"

[tool.setuptools.dynamic]
version = { attr = "i7aof.version.__version__" }

[project.urls]
"Bug Tracker" = "https://github.com/ismip/ismip7-antarctic-ocean-forcing/issues"

[tool.ruff]
exclude = [".git",
           "docs",
           "*.ipynb"]
line-length = 79

[tool.ruff.lint]
# E501 - max line-length
# E4 - whitespace
# E7 - multiple-statements
# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# C901 - complex-structure
# D - Enable flake8-docstrings
select = ["E501", "E4", "E7", "E9", "F", "B", "W", "C901"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
# Only collect tests from the unit-test suite
testpaths = [
    "tests"
]
# You can also ignore additional folders explicitly if needed
# addopts = "--ignore=scripts"
